SOC-4599, SOC-4607: overlap bugs

--- a/webapp/portlet/src/main/webapp/skin/less/uiUserPortlet/Style.less
+++ b/webapp/portlet/src/main/webapp/skin/less/uiUserPortlet/Style.less
@@ -116,6 +116,10 @@ td.right-column-containerTDContainer {
 			margin: 0 0 15px;
 			.value-user-info {
 				display: table;
+				> div {
+					word-break: break-all;
+				}
+				
 				.listContent {
 					display: table-row;
 					> div {
